# notes

./: LICENSE
array/bqn/tutorials/: arithmetic.bqn
cpp/: elements_of_programming.md  tour_of_cpp.md
cpp/eop_cpp/: .gitignore  eop.cpp  eop.hpp  eop_sols.cpp  fixHeaders.py  meson.build
functional/haskell/pih/: 2  ChangeLog.md  README.md  flake.nix  package.yaml  pih.cabal  session.yml  stack.yaml  tags
functional/haskell/pih/app/: Main.hs
functional/haskell/pih/bench/: Bench.hs
functional/haskell/pih/src/: AbstractMachine.hs  BinaryStringTransmitter.hs  Chapter1.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter2.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  CountdownSolver.hs  Graphics.hs  Hangman.hs  Lib.hs  Life.hs  Nim.hs  TautologyChecker.hs  Term.hs  TicTacToe.hs
functional/haskell/pih/test/: Spec.hs
functional/lisp/sicp/: chap1.rkt  main.rkt  tests.rkt  utils.rkt
maths/programming_with_categories/psets/: .stylish-haskell.yaml  ChangeLog.md  LICENSE  package.yaml  psets.cabal
maths/programming_with_categories/psets/app/: Main.hs
maths/programming_with_categories/psets/src/: Lib.hs  Pset1.hs
